NAS-112795 / None / NAS-112795: fixed form-input value overlap icon (#6356)
* NAS-112795: fixed form-input value overlap icon

* NAS-112795: styles moved from shared file to component file

* NAS-112795: change width input in entity-dialog

* NAS-112795: change width input in entity-dialog

--- a/src/assets/styles/other/_tn-styles.scss
+++ b/src/assets/styles/other/_tn-styles.scss
@@ -1029,7 +1029,6 @@ $primary-dark: darken(map-get($md-primary, 500), 8%);
   app-entity-dialog .has-pwtoggle {
     background: rgba(0, 0, 0, 0) !important;
     padding: 0 0 10px !important;
-    width: 385px !important;
 
     mat-form-field {
       width: 79% !important;
